--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -114096,4 +114096,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01040201)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01040251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
