--- a/pages/nf4514/n12663672.md
+++ b/pages/nf4514/n12663672.md
@@ -1,4 +1,4 @@
-### 【疫情更新1.3】沈阳出现超级传染者
+### 【疫情更新1.3】俄亥俄州不强制医护接种疫苗
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2021年01月03日讯】（大纪元记者徐简综合报导）新年伊始，世界各国纷纷收紧限制措施，以防中共（新冠、Covid-19）病毒疫情进一步扩散。
+ 【大纪元2021年01月03日讯】（大纪元记者徐简、戴芙若、谢佳宣综合报导）新年伊始，世界各国纷纷收紧限制措施，以防中共（新冠、Covid-19）病毒疫情进一步扩散。
 </p>
 <p>
  美国累计已通报了2090万确诊病例，其中有35.8万人病故。在欧洲，英国连续单日新增5万多例，意大利累计死亡人数达到7.5万人，居全欧之首；德国的疫情病亡数在12月爆增三倍。
@@ -27,7 +27,7 @@
  北京七地升至中风险地区，近两周官方通报的确诊就超过25例。但官方报导中，隐去姓氏、相关连企业，导致信息混乱，民众搞不清楚真实状况。
 </p>
 <p>
- 日前宣布进入战时状态的中国东北大都沈阳市正在全市实施全方位排查，档次还出现了一位“超级感染者”，一人感染了21人。
+ 日前宣布进入战时状态的中国东北大都沈阳市正在全市实施全方位排查，还出现了一位“超级感染者”，一人感染了21人。
 </p>
 <p>
  北京市已要求政府人员和国有企业、事业单位工作人员“带头在京过节”，要倡导“非必要不出京”，做到“非必要不出境”。当局还希望市民群众“就地过节”。
@@ -36,10 +36,106 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 俄亥俄州州长：不强制医护人员接种
+</h3>
+<p>
+ 俄亥俄州州长迈克·德维恩（Mike DeWine）表示，截至周日上午，俄亥俄州已经完成了16.1万次
+ <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
+  中共病毒
+ </ok>
+ <ok href="https://www.epochtimes.com/gb/tag/%E7%96%AB%E8%8B%97.html">
+  疫苗
+ </ok>
+ 接种。
+</p>
+<p>
+ 他补充说，全州至少有61%的养老院已经注射了第一轮
+ <ok href="https://www.epochtimes.com/gb/tag/%E7%96%AB%E8%8B%97.html">
+  疫苗
+ </ok>
+ ，州政府预计，全州所有的养老院将在两周内接受第一轮注射。
+</p>
+<p>
+ 德维恩也对全美医务总监杰罗姆·亚当斯（Jerome Adams）的担忧做出回应，亚当斯周日告诉媒体，他担心俄亥俄州60%的养老院工作人员选择不接种疫苗。
+</p>
+<p>
+ 对此，德维恩表示，他不会强制要求养老院和其它医疗机构要求员工接种疫苗，他说民众是否决定接种“这取决于他们”。
+</p>
+<p>
+ 当俄亥俄州在养老院进行第二轮疫苗接种时，那些拒绝第一轮疫苗接种的工作人员可以在第二轮中接受注射。
+</p>
+<h3>
+ 全美医务总监称：无论何种病毒株 我们都能战胜这种病毒
+</h3>
+<p>
+ 全美医务总监（US Surgeon General） 杰罗姆·亚当斯（Jerome Adams）周日接受CNN采访时表示，虽然很难说新的
+ <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
+  中共病毒
+ </ok>
+ （武汉肺炎）变种毒株是否在全国范围内广泛流行，但无论何种毒株，美国都有战胜它的工具。
+</p>
+<p>
+ 亚当斯说，最重要的是，“到目前为止，我们并不觉得这种新的菌株会对疫苗，或对我们现有的疗法产生抗药性。所以这是一个好消息。”
+</p>
+<p>
+ 亚当斯表示，“无论何种病毒株，我们都有能够战胜这种病毒的工具，我们只需要真正贯彻执行的意愿，做我们知道会帮助我们的事情。”
+</p>
+<h3>
+ 意大利中共病毒死亡人数超过7.5万人
+</h3>
+<p>
+ 意大利政府的疫情数据显示，该国周日增加了347名染疫死亡人数，使总死亡人数达到75,332人。
+</p>
+<p>
+ 此外，该国在过去24小时内新增了14,245例确诊，使总病例数达到215万例（2,155,446）。
+</p>
+<h3>
+ 法国计划夏季前为2600万人疫苗接种
+</h3>
+<p>
+ 法国运输部长让巴蒂斯特·杰贝里（Jean-Baptiste Djebbari）周日在接受媒体采访时说，法国政府计划在夏季之前为2600万法国人接种抗Covid-19疫苗。
+</p>
+<p>
+ 他说：“目前，我们每周有50万剂（辉瑞/ BioNTech疫苗）到货，并且我们已经获得了每周数十万剂其它疫苗的合同，这些疫苗的使用将很快获得批准。”
+</p>
+<p>
+ 杰贝里补充说，牛津/阿斯利康（Oxford/AstraZeneca）和摩德纳（Moderna）的疫苗也将在“未来几天内”获得欧洲药品管理局的批准。
+</p>
+<p>
+ 法国卫生部长奥利维尔·韦兰（Olivier Veran）周四在Twitter上宣布，将加快在法国针对Covid-19的疫苗接种运动。
+</p>
+<h3>
+ 英国连续6天报告新病例逾5万
+</h3>
+<p>
+ 英国连续六天报告了50,000多例新的Covid-19病例，周日也至少报告了54,990例新确诊病例。
+</p>
+<p>
+ 周二，英国报导了新增病例53135例，周三50,023例，周四55,892例，周五53285例，以及自大流行开始以来病例数最高的周六的57,725例。
+</p>
+<p>
+ 周日，英国还报告说，有454人死亡，使自大流行开始以来的死亡总人数达到75,024人。
+</p>
+<h3>
+ 韩国监狱病例增至1,084起 明日起全国禁5人以上聚会
+</h3>
+<p>
+ 韩国疾病预防控制局（KDCA）周日表示，与韩国监狱有关的Covid-19病例数量已上升至1,084人。
+</p>
+<p>
+ KDCA在一份声明中说，首尔东南的东部看守所的染疫人员已达到1,084人，其中有囚犯1,041人，工作人员22人，20名家庭成员和一名熟人。
+</p>
+<p>
+ 根据KDCA的数据，截至周日，韩国已报告63,244例Covid-19病例和962例死亡。
+</p>
+<p>
+ 韩国政府1月2日宣布，首都圈第2.5阶段、非首都圈第2阶段社交距离规范及特别防疫期相关规定延长实施至17日，并将先前首都圈实施的5人以上聚会禁令扩大至全国，自4日凌晨零时起实施。
+</p>
+<h3>
  泰国报导第一例英国病毒变种
 </h3>
 <p>
- 朱拉隆功大学的高级病毒学家永·波沃万（Yong Poovorawan）医生说，泰国报告了第一例英国Covid-19变种，该病毒变种病例是一个于2020年12月21日抵达曼谷的从英国来的家庭。
+ 朱拉隆功大学的高级病毒学家永·波沃万（Yong Poovorawan）医生说，泰国报告了第一例英国Covid-19变种病毒，该病毒变种病例是一个于2020年12月21日抵达曼谷的从英国来的家庭。
 </p>
 <p>
  根据周日Yong Poovorawan医生在Facebook上发布的帖子，这个英国的四口之家全部被感染。母亲和两个孩子首先感染了，然后又传给父亲。这家人来自英国肯特，目前在一家私人医院被隔离。
@@ -51,21 +147,13 @@
  泰国疾病控制司司长Opas Karnkawinpong博士也证实了该英国Covid-19病毒变种的信息。他说，公共卫生部已建议外交部推迟未来从英国来的旅客。
 </p>
 <p>
- 许多国家/地区已禁止来自英国的飞行，美国疾病预防控制中心（CDC）最近宣布，从伦敦到美国的乘客将需要在登机之前的72小时内
- <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
-  中共病毒
- </ok>
- 测试的结果为阴性。
+ 许多国家/地区已禁止来自英国的飞行，美国疾病预防控制中心（CDC）最近宣布，从伦敦到美国的乘客将需要在登机之前的72小时内中共病毒测试的结果为阴性。
 </p>
 <h3>
  王丹确认染疫 已度过隔离期
 </h3>
 <p>
- 在美国的民主运动人士王丹在脸书发文表示，去年12月底他的
- <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
-  中共病毒
- </ok>
- 检测阳性，确诊感染中共肺炎。但他说自己症状轻微，医生说他可以结束自我隔离。
+ 在美国的民主运动人士王丹在脸书发文表示，去年12月底他的中共病毒检测阳性，确诊感染中共肺炎。但他说自己症状轻微，医生说他可以结束自我隔离。
 </p>
 <p>
  王丹1月3日在社交媒体公布了自己感染了中共病毒的消息。他称自己的症状轻微，且有症状至今已经超过12天，目前状况良好，医生已经通知可以结束自我隔离。
@@ -77,10 +165,10 @@
  川普：CDC夸大了美国染疫人数
 </h3>
 <p>
- 川普总统在周日早上发推文说，美国的CDC把患中共病毒的人数和死亡人数过于夸大了，“如果不确定（病因），就说是Covid!”。
+ 川普总统在周日早上发推文说，美国CDC把患中共病毒的人数和死亡人数夸大了，“如果不确定（病因），就说是Covid!”。
 </p>
 <p>
- 总统还说，许多国家故意的、非常不准确报导染疫数据。
+ 总统还说，许多国家故意、非常不准确报导染疫数据。
 </p>
 <blockquote class="twitter-tweet">
  <p dir="ltr" lang="en">
@@ -96,21 +184,14 @@
 <p>
 </p>
 <h3>
- 欧盟料最快周三批准使用Moderna
- <ok href="https://www.epochtimes.com/gb/tag/%E7%96%AB%E8%8B%97.html">
-  疫苗
- </ok>
+ 欧盟料最快周三批准使用Moderna疫苗
 </h3>
 <figure class="wp-caption aligncenter" id="attachment_12554048" style="width: 600px">
  <ok href="https://i.epochtimes.com/assets/uploads/2020/11/shutterstock_1716346753.jpg">
   <img alt="美国莫德纳（Moderna）公司研发的中共病毒（COVID-19）疫苗有了好消息：有效率高达94.5%。(Shutterstock)" class="size-large wp-image-12554048" src="https://i.epochtimes.com/assets/uploads/2020/11/shutterstock_1716346753-600x400.jpg"/>
  </ok>
  <br/><figcaption class="wp-caption-text">
-  美国莫德纳（Moderna）公司研发的中共病毒（COVID-19）
-  <ok href="https://www.epochtimes.com/gb/tag/%E7%96%AB%E8%8B%97.html">
-   疫苗
-  </ok>
-  有了好消息：有效率高达94.5%。(Shutterstock)
+  美国莫德纳（Moderna）公司研发的中共病毒（COVID-19）疫苗有了好消息：有效率高达94.5%。(Shutterstock)
  </figcaption><br/>
 </figure><br/>
 <p>
@@ -126,7 +207,7 @@
  印度成功培养出英国的变种病毒株
 </h3>
 <p>
- 印度医学研究委员会（ICMR）及印度国家病毒研究院（National Institute of Virology，简称NIV）上周六说，已成功从英国回国人士的临床样本中，分离并培养在英国发现变种病毒的病毒株。
+ 印度医学研究委员会（ICMR）及印度国家病毒研究院（National Institute of Virology，简称NIV）上周六说，已成功从英国回国人士的临床样本中，分离并培养出在英国发现变种病毒的病毒株。
 </p>
 <p>
  除了印度，目前还未有任何国家成功培养变种病毒株。专家指，变种病毒株可用来研发疫苗及药物。
@@ -144,7 +225,7 @@
  这场活动于巴塞罗那东北部约30公里的村落利纳尔斯（Llinas del Valles）展开，狂欢者聚集在一起，无视于疫情限制措施。
 </p>
 <p>
- 当地警方推文表示，他们已经没收用于这场派对的所有音响系统和其他设备，并会处罚所有涉案人士。警方说，参加这种活动的罚款最低是3000欧元。
+ 当地警方推文表示，他们已经没收用于这场派对的所有音响系统和其它设备，并会处罚所有涉案人士。警方说，参加这种活动的罚款最低是3000欧元。
 </p>
 <p>
  根据西班牙国家广播电台（RNE）报导，当时数百名警察进入仓库，一架警用直升机从头上飞过，大批民众聚集在附近围观。
@@ -371,6 +452,8 @@
 <p>
  责任编辑：李玲
 </p>
+<div id="gtx-trans" style="position: absolute; left: 299px; top: 486.872px;">
+</div>
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
