--- a/pages/nf4514/n12663672.md
+++ b/pages/nf4514/n12663672.md
@@ -1,13 +1,13 @@
-### 【疫情更新1.3】俄亥俄州不强制医护接种疫苗
+### 【疫情更新1.3】洛杉矶市长：每六秒1例确诊
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
 
 
 
-<div><img alt="【疫情更新1.3】俄亥俄州不强制医护接种疫苗" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/2012302043512124-600x400.jpg"/>
+<div><img alt="【疫情更新1.3】洛杉矶市长：6秒1例确诊" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/2012310604122124-600x400.jpg"/>
 <div class="caption">
- 图为2020年12月30日，一名美国药剂师正在准备辉瑞中共病毒疫苗。此照为示意图。（BRENDAN SMIALOWSKI/AFP via Getty Images）
+ 2020年12月30日新年假期之前，从无人机的鸟瞰看到，车辆在洛杉矶道奇体育场（Dodger Stadium）周围排队，人们等待作核酸测试。(Mario Tama/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -36,24 +36,61 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 洛杉矶市长：病毒正在迅速传播 每六秒就有1例
+</h3>
+<p>
+ 洛杉矶市长艾瑞克·贾西迪（Eric Garcetti）周日警告说，洛杉矶县地区的确诊数量近期明显激增，大约每六秒钟就有一例确诊。
+</p>
+<p>
+ 贾西迪在哥伦比亚广播公司的节目中说，尽管加州已下令实施严格措施，包括要求民众戴口罩和对企业重新施加的限制，以防止病毒传播，但该州仍然出现了大量的新病例，例如该县平均每天有1.4万人确诊。
+</p>
+<p>
+ “现在这个东西真的是在家庭中蔓延。”贾西迪补充说，“这是给全美国的一个信息：你们可能没有洛杉矶那样的密度，但洛杉矶发生的事情，或将在美国的许多社区发生。”
+</p>
+<p>
+ 现在加州医院里的染疫患者数量是一个月前的两倍多，州内许多重症监护室已经爆满。该州至少有4人被发现感染了在英国首次发现的、传染性更强的变种病毒。
+</p>
+<p>
+ 市长说：“按目前进度，我们现在的速度是在五年内向洛杉矶（人）提供
+ <ok href="https://www.epochtimes.com/gb/tag/%E7%96%AB%E8%8B%97.html">
+  疫苗
+ </ok>
+ ，而不是半年以上。”
+</p>
+<h3>
+ 南卡罗来纳州4县的医院容量已满
+</h3>
+<p>
+ 根据南卡罗来纳州卫生和环境控制部的数据，在南卡所有的46个县中，有4个县的医院容量已经全满。这些县分别是北部的约克县（York County）、南部的贾斯珀县（Jasper County），以及东部的狄龙县（Dillon County）和马里恩县（Marion County）。
+</p>
+<p>
+ 该州周日报告说，其病毒检测阳性率为29.6％。
+</p>
+<p>
+ 据该部门报告，目前全州正规医院和重症监护室的床位已用将近80%，其中，染疫患者占普通医院病床的24%，占重症监护室病床的近20%。
+</p>
+<p>
+ 南卡周日报告了3,952个新病例，28例新死亡病例。自该州开始报告疫情数据以来，已有超过5,000名南卡人因为感染
+ <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
+  中共病毒
+ </ok>
+ 而丧生。
+</p>
+<h3>
  俄亥俄州州长：不强制医护人员接种
+ <ok href="https://www.epochtimes.com/gb/tag/%E7%96%AB%E8%8B%97.html">
+  疫苗
+ </ok>
 </h3>
 <p>
  俄亥俄州州长迈克·德维恩（Mike DeWine）表示，截至周日上午，俄亥俄州已经完成了16.1万次
  <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
   中共病毒
  </ok>
- <ok href="https://www.epochtimes.com/gb/tag/%E7%96%AB%E8%8B%97.html">
-  疫苗
- </ok>
- 接种。
+ 疫苗接种。
 </p>
 <p>
- 他补充说，全州至少有61%的养老院已经注射了第一轮
- <ok href="https://www.epochtimes.com/gb/tag/%E7%96%AB%E8%8B%97.html">
-  疫苗
- </ok>
- ，州政府预计，全州所有的养老院将在两周内接受第一轮注射。
+ 他补充说，全州至少有61%的养老院已经注射了第一轮疫苗，州政府预计，全州所有的养老院将在两周内接受第一轮注射。
 </p>
 <p>
  德维恩也对全美医务总监杰罗姆·亚当斯（Jerome Adams）的担忧做出回应，亚当斯周日告诉媒体，他担心俄亥俄州60%的养老院工作人员选择不接种疫苗。
@@ -64,15 +101,19 @@
 <p>
  当俄亥俄州在养老院进行第二轮疫苗接种时，那些拒绝第一轮疫苗接种的工作人员可以在第二轮中接受注射。
 </p>
+<figure class="wp-caption aligncenter" id="attachment_12611734" style="width: 450px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230011646.jpg">
+  <img alt="" class="size-medium wp-image-12611734" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230011646-450x300.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  图为疫苗资料照。 (Victoria Jones – Pool / Getty Images)
+ </figcaption><br/>
+</figure><br/>
 <h3>
  全美医务总监称：无论何种病毒株 我们都能战胜这种病毒
 </h3>
 <p>
- 全美医务总监（US Surgeon General） 杰罗姆·亚当斯（Jerome Adams）周日接受CNN采访时表示，虽然很难说新的
- <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
-  中共病毒
- </ok>
- （武汉肺炎）变种毒株是否在全国范围内广泛流行，但无论何种毒株，美国都有战胜它的工具。
+ 全美医务总监（US Surgeon General） 杰罗姆·亚当斯（Jerome Adams）周日接受CNN采访时表示，虽然很难说新的中共病毒（武汉肺炎）变种毒株是否在全国范围内广泛流行，但无论何种毒株，美国都有战胜它的工具。
 </p>
 <p>
  亚当斯说，最重要的是，“到目前为止，我们并不觉得这种新的菌株会对疫苗，或对我们现有的疗法产生抗药性。所以这是一个好消息。”
@@ -452,8 +493,6 @@
 <p>
  责任编辑：李玲
 </p>
-<div id="gtx-trans" style="position: absolute; left: 299px; top: 486.872px;">
-</div>
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
