--- a/pages/p8/958205.md
+++ b/pages/p8/958205.md
@@ -1,4 +1,4 @@
-### 人生犯“3错” 反是福气(组图)
+### 6种家具别乱买 花钱又占空间(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="人生 福气 传统 忍让" src="https://img3.secretchina.com/pic/2020/9-2/p2768092a573970753-ss.jpg"/>
+ <p style="text-align:center">
+  <img alt="茶几 酒柜 吊椅 鱼缸" src="https://img3.secretchina.com/pic/2021/1-6/p2852254a493588233-ss.jpg"/>
   <br>
-   人生犯“3坏”，反是福气。（图片来源：Adobestock）
+   花钱又占空间，6种家具别乱买。（图片来源：Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,53 +21,47 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  揭开中共秘密结盟日军，卖国求生秘闻 ](http://141.164.51.119:10000/videos/news/epoch01.html)
-
-#### [ 🔥  習近平能一手搞垮中共？ 美或暗助習內鬥；王岐山怎麼了？](http://141.164.51.119:10000/videos/news/epoch02.html)
-
-#### [ 🔥  「透视中国」急推数字人民币 中共加速自我灭亡](http://141.164.51.119:10000/videos/news/don01.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  古人的许多传统观念，从现代的观点来看，常会让人嗤之以鼻，不以为然。但实际上，那些观念却往往符合天道，是
-  <span href="https://www.secretchina.com/news/gb/tag/人生" target="_blank">
-   人生
-  </span>
-  的智慧结晶，才是我们该重视的。
+  很多人当新房子装修好之后，总会开心跑去挑选家具，但如果事前没规划好，在推销员循循善诱和精美图文介绍下，很容易冲动购物。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  正所谓是福不是祸，是祸躲不过。现代人在追求物质享受之余，却很少有人注意到祸福相倚，凡事都有两面性。一件事究竟是福是祸，绝不单纯是眼前所看到的结果，更多时候，要考虑所带来的全盘影响。
- </p>
- <p>
-  人没有三天好日子过，一个人的日子不可能一路顺逆，但也不会始终处于谷底。有时我们觉得是坏事的时候，实际上反而是好事。以下就介绍现在许多人表面觉得不好的三件坏事，但实际上反而是大好事。
+  而根据经验，一间房子住久后，会发现有些家具根本不实用，不但浪费钱，又很占空间，甚至不好整理，想丢还非常麻烦。以下就介绍六种超不实用的家具。
  </p>
  <p>
   <strong>
    1
   </strong>
   <strong>
-   、能舍
+   、圆形床
   </strong>
  </p>
  <p>
-  世间万物运行，一直就是循环往复，不论哪个时代都是如此。当我们选择做一件事时，那么这事可能带来收益，也可能带来灾祸，这些都是每个人的选择。
+  很多朋友会想把圆形床买回家，应该是觉得好看又浪漫。但一般方正的房间，通常不具备放置圆形床的条件，只有空间宽敞的才适合放。当然圆形床造型特别，布置好了也有浪漫的感觉，但是实用性真的不高，同时想买寝具时，会发现配套产品十分少。
  </p>
  <p>
-  对许多人来说，眼前垂手可得的利益与好处不去争取，给人的感觉就像个傻子似的。但实际上，这些事物未必是我们命中该有的。当我们强求来的时候，无形中反而损及原本该拥有的人。而这样做的结果，就是损了自己的福报。这种得失或许一时看不出来，但时间一久，绝不划算，反而要付出更大的代价。
+  <strong>
+   2
+  </strong>
+  <strong>
+   、
+   <span href="https://www.secretchina.com/news/gb/tag/茶几" target="_blank">
+    茶几
+   </span>
+  </strong>
+ </p>
+ <p>
+  很多人会觉得客厅就是要放沙发、茶几、电视柜三种家具。尤其婚房，若没有这些，给人的感觉就很寒酸。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -82,7 +76,22 @@
   </div>
  </center>
  <p>
-  因此，有时我们做一件事，看似有所失，感觉是场灾难，但有舍有得。在我们选择舍弃，放下不强求的同时，老天也必定会在另一方面对我们加以补偿。古人常说“塞翁失马，焉知非福”就是这个道理。
+  但沙发和电视柜一般因为靠墙放还好，若中间放了一个笨重的大茶几，对许多空间小的房子来说，确实很碍事。尤其是刚生小孩的家庭，会发现茶几常常占用了不少小孩活动的空间。但如果要把它扔掉又觉得可惜，不扔放家里又占地方，形成两难。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  其实茶几的功能就是临时放置一些物品，所以可以的话，不妨选择小茶几就行了，这样不但可放在沙发旁，不用时也可以挪到床边当床头柜，反而灵活又实用。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -97,9 +106,9 @@
   </div>
  </center>
  <p style="text-align: center;">
-  <img alt="古人常说“塞翁失马，焉知非福”。" src="https://img3.secretchina.com/pic/2019/12-27/p2590782a632893400-ss.jpg"/>
+  <img alt="很多人会觉得客厅就是要放沙发、茶几、电视柜三种家具。" src="https://img3.secretchina.com/pic/2021/1-6/p2852252a898799417-ss.jpg"/>
   <br>
-   古人常说“塞翁失马，焉知非福”。（图片来源：Adobestock）
+   很多人会觉得客厅就是要放沙发、茶几、电视柜三种家具。（图片来源：Adobestock）
   </br>
  </p>
  <center>
@@ -116,10 +125,13 @@
  </center>
  <p>
   <strong>
-   2
+   3
   </strong>
   <strong>
-   、吃亏
+   、
+   <span href="https://www.secretchina.com/news/gb/tag/酒柜" target="_blank">
+    酒柜
+   </span>
   </strong>
  </p>
  <center>
@@ -135,7 +147,7 @@
   </div>
  </center>
  <p>
-  人们常说吃亏就是占便宜，但真到了吃亏时，能以占便宜的心态看待的人，可真是寥寥可数。不想吃亏，无非就是有名可取，有利可图，所以在看重名利的情况下，自然不愿轻易放弃自己即将获得的名利。
+  很多人电视剧看多了，觉得家里有酒柜才能显出品味。当然如果房子空间大，放个酒柜确实看来感觉很高尚，而且对富人而言，购买多贵的好酒，放在柜里展示也不是问题。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -150,7 +162,7 @@
   </div>
  </center>
  <p>
-  又或者像职场上，有时针对上司或同事推过来的案子，总觉不是自己的份内事，就会觉得自己吃了亏，被对方占了便宜，然后就感到忿忿不平。长久下来，这些不想吃亏的心理，不但会让自己争名夺利的心更加膨胀，可能在过程中，也会开始耍各种心机，只为了不愿吃亏。
+  只是对普通家庭来说，有些人平时也没啥在喝酒，就算常喝，通常也不是什么名贵的酒，摆了也不见得有品味。另外酒柜空置的时间通常也较长，不仅占空间，扫除时也令人头疼。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -165,7 +177,15 @@
   </div>
  </center>
  <p>
-  但换个角度想，有时吃了亏，对自己的待人处事，以及心智、工作技能反而会有所成长，正应了人们“吃亏就是占便宜”的说法呢！
+  <strong>
+   4
+  </strong>
+  <strong>
+   、
+   <span href="https://www.secretchina.com/news/gb/tag/吊椅" target="_blank">
+    吊椅
+   </span>
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -184,13 +204,63 @@
   </ins>
  </center>
  <p>
+  吊椅坐起来确实让人感到舒服，但比较适合有花园或是大阳台的家庭。现在很多年轻人的房子都不大，阳台面积也很小，再摆张吊椅，真的太拥挤，平时要想在阳台晾衣服，也会很不方便。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
   <strong>
-   3
+   5
+  </strong>
+  <strong>
+   、地毯
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  地毯清洗不易又容易滋生尘螨细菌，就算有小孩，也不适合在上面游戏。很多人买的时候觉得地毯是很好的装饰品，坐在上面看电视也挺舒服的。只是客厅小的话，还是不要放地毯了，否则一铺开后，客厅的走道也会变得更狭窄。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   6
   </strong>
   <strong>
    、
-   <span href="https://www.secretchina.com/news/gb/tag/忍让" target="_blank">
-    忍让
+   <span href="https://www.secretchina.com/news/gb/tag/鱼缸" target="_blank">
+    鱼缸
    </span>
   </strong>
  </p>
@@ -207,7 +277,7 @@
   </div>
  </center>
  <p>
-  这也是许多人无法接受的事。凡事总要争个你死我活，讲出个道理来，丝毫不肯退让。不愿退让的人，有时或许有自己的坚持，但更多时候是出于自己的执着心，总觉理直气壮，不肯让对方一步。久了就成为人们眼中的利己主义者。
+  很多人也是电视剧看多了，觉得家里放个鱼缸会显得更高大上，可惜买回家一段时间后就会发现，打理鱼缸以及照顾里面的鱼也挺麻烦的。没做好清洁，不但水容易混浊，鱼也容易生病，影响到其它鱼类的健康，甚至令室内空气品质恶化。所以除非真的喜欢养鱼，不然就别跟风购买了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -222,71 +292,7 @@
   </div>
  </center>
  <p>
-  但愿意退让的人，心胸是开阔的，他们了解成事毋需在我的道理。对方的做法未必不可取，也许有我们所不知道的优势也走未可知。而且有时我们一开始争执不休的事物，后来回头看的时候，反正会对我们当初的心胸狭窄感到汗颜。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  古人说“懂善恶，方晓祸福”。由于中国人讲求天人合一，所以也十分重视因果。在衡量事物的得失之际，其实也在选择进退之道，福祸自然也在其中。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  心存善念，诚心为对方着想的人，难免遇到不顺遂的事，但到头来终有善报。而行恶之人，看似占尽便宜，享尽好处，但也只是报应未至，时间一到，后悔莫及。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
-   </span>
-  </center>
+  以上就是常见的不实用又占地方的6种家具，购买时要慎重考虑。你也有自己心中不实用的家具清单吗？也欢迎在底下留言，跟读者分享。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -299,6 +305,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:王承
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41Gv"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -316,13 +356,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/944856.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/944856.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/944856.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/02/944856.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/958205.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/958205.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/958205.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/06/958205.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/944856.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/958205.md' width='0px' height='0px'/>
