--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -114492,4 +114492,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01062002)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01062051)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
