--- a/pages/nf4514/n12671553.md
+++ b/pages/nf4514/n12671553.md
@@ -1,4 +1,4 @@
-### 【更新】国会拟今晚继续联席会议
+### 【更新】川普再吁抗议者和平地回家
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -33,10 +33,10 @@
  ，附近的建筑物被疏散，当时国会正在进行联席会议，就第一个涉及选举舞弊争议的亚利桑那州进行辩论。
 </p>
 <p>
- 川普（特朗普）总统呼吁反对暴力，维持和平，并指示弗吉尼亚州的国民警卫队赶赴首都华盛顿DC。马里兰州的国民警卫队也赶赴DC。随后川普发布视频，呼吁抗议者回家。
+ 川普（特朗普）总统呼吁反对暴力，维持和平，并指示弗吉尼亚州的国民警卫队赶赴首都华盛顿DC。马里兰州的国民警卫队也赶赴DC。
 </p>
 <p>
- 周三晚间，议长佩洛西表示，一旦国会被清场后可以恢复联席会议之后，国会领导人已决定今晚继续认证过程。共和党参议员乔希·霍利（Josh Hawley）周三下午在推特上说，国会 “必须回到工作岗位上，完成工作”。
+ 随后川普发布视频，呼吁抗议者回家。
 </p>
 <p>
  根据现场记者传出的消息，国会警察刚说国会大厦被攻破了，国会警察正在进行调查。同时，国会警察刚下达新的封锁令，要求封锁国会大厦内的所有建筑。
@@ -53,79 +53,13 @@
  以下是实时更新内容（美东时间）：
 </p>
 <p>
- 19：09
-</p>
-<p>
- “国会山”（The Hill）的消息人士透露，众议院和参议院的房间正在清理中，因此整个参议院和众议院可以在晚上8点后恢复程序。
-</p>
-<p>
- 目前尚不清楚众议院和参议院是否打算通宵达旦开会，或者认证程序将持续多长时间。
-</p>
-<p>
- 18：56
-</p>
-<p>
- 推特在周三晚间删除了数条川普的推文，包括一段呼吁支持者回家的视频推文，以及再次呼吁支持者和平地回家的推文。川普说副总统迈克·彭斯（Mike Pence）缺乏做必要事情“勇气”的推文也被删除。
-</p>
-<p>
- 18：42
-</p>
-<p>
- 在给同事的一封信中，众议院议长南希·佩洛西宣布，一旦国会被清场后可以恢复联席会议之后，国会领导人已决定今晚认证拜登胜选。
-</p>
-<p>
- “经过与（民主党国会领袖）霍耶和（民主党）党鞭克莱本（Clyburn）协商，并在致电五角大楼、司法部和副总统后，我们决定今晚在国会大厦被批准使用后，应该在今晚继续进行（认证）。霍耶领袖将在今天稍后发出更多指导。”她说。
-</p>
-<p>
- 18：31
-</p>
-<p>
- 宵禁颁布后，美国国会大厦周围的人群减少。
-</p>
-<p>
- 美东时间周三下午6点强制执行宵禁后，美国国会大厦附近的人群开始疏散。
-</p>
-<p>
- 截至下午6:25，一大群人离开国会大厦。
-</p>
-<p>
- 18：28
-</p>
-<p>
- 三位外交消息人士告诉CNN，美国海外外交官被告知，鉴于在华盛顿特区的国会山上的冲突，所有社交媒体帖子都将被暂停，这是通常仅在恐怖袭击和重大自然灾害期间采取的措施。
-</p>
-<p>
- 公共事务副部长向海外的美国外交官发送一条信息，命令他们暂停在社交媒体账户帖文，并删除所有计划在Facebook，Hootsuite和Twitter上发布的计划内容，直至另行通知。
-</p>
-<p>
- 该消息还说，国务院旗舰账户社交媒体原本计划张贴的帖文也正在被冻结。
-</p>
-<p>
- 18：27
-</p>
-<p>
- 哥伦比亚特区警方证实，在国会大厦内中枪的女子已经死亡
-</p>
-<p>
- “是的，在国会大厦内中枪的成年女性在地区医院被宣告死亡。”大都会警察局发言人达斯汀·斯特恩贝克（Dustin Sternbeck）说。
-</p>
-<p>
- 斯特恩贝克说：“将有更多细节，因为这仍是一项正在进行的MPD调查。”
-</p>
-<p>
- 18：16
+ 18：06
 </p>
 <p>
  川普总统再次发推说，这些都是当神圣的、压倒性选举胜利，被毫不客气地、恶毒地从伟大爱国者手中剥夺时发生的事情和事件，这些爱国者长期以来受到严重和不公正待遇。
 </p>
 <p>
  “充满爱与和平地回家。永远记住这一天！”他写道。
-</p>
-<p>
- 18：10
-</p>
-<p>
- 代理司法部长杰弗里·罗森（Jeffrey A. Rosen）周三晚上发表声明，称美国国会大厦的暴力事件“是对我们民主基本制度无法容忍的攻击。”
 </p>
 <p>
  18：05
@@ -452,7 +386,7 @@
    <img alt="" class="size-large wp-image-12671682" src="https://i.epochtimes.com/assets/uploads/2021/01/000_8YA7X2-600x423.jpg"/>
   </ok>
   <br/><figcaption class="wp-caption-text">
-   国会大厦外部(Photo by Joseph Prezioso / AFP)
+   国会大厦内部(Photo by Joseph Prezioso / AFP)
   </figcaption><br/>
  </figure><br/>
  <p>
